syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.smartClass.SCService1";
option java_outer_classname = "SCService1Impl";


service SCService1{

	rpc setStudentAttendance (setStudentAttendanceRequest) returns (setStudentAttendanceResponse) {}
    
    // Retrieves a user's profile.
    rpc getStudentAttendance(getStudentAttendanceRequest) returns (getStudentAttendanceResponse) {}

}

message setStudentAttendanceRequest{

	string studentID = 1;
	
	string studentRFIDstatus = 2;
}

message setStudentAttendanceResponse{

	string response_message = 1;
	int32 responseCode = 2;
	
}

message getStudentAttendanceRequest{

	string tStudentID = 1;
	
}

message  getStudentAttendanceResponse{

	string studentID = 1;
	string response_message = 2;
	int32 responseCode = 3;
	
} 